# skin-generator

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/: Gui.h  LBuilder.hpp  LExtractor.h  LParser.hpp  common_headers.hpp  inja.hpp  util.h
resource/: clothing.tpl  filter.txt  init.tpl  modinfo.tpl  modmain.tpl  register_inv.tpl  skinprefabs.tpl
resource/source/: clean.bat  localskinmain.lua  modclientmain.lua  modicon.tex  modicon.xml
resource/source/images/: ms_buttons.tex  ms_buttons.xml
resource/source/skinloader/: skin_gui.lua  skinloader.lua
src/: Generator.cpp  Gui.cpp  LBuilder.cpp  LParser.cpp  util.cpp
test_skins_generator/: 111.json  CMakeLists.txt  TestBuild.cpp  TestGenLuaCode.cpp  TestGenerate.cpp  TestGui.cpp  TestLExtracter.cpp  TestLParser.cpp  TestLog.cpp  TestUnzipFolder.cpp  TestZip.cpp
